dist/1.0/bin/sample/retrieveUnpackaged/objects/Workflow__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Workflow__c</referenceTo>
        <relationshipLabel>Workflows</relationshipLabel>
        <relationshipName>Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Method__c</fullName>
        <label>Provisioning Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <label>Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Workflows</relationshipLabel>
        <relationshipName>Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Interval__c</fullName>
        <label>Standard Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <label>WhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Workflow</label>
    <nameField>
        <displayFormat>WF-{000000}</displayFormat>
        <label>Workflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>